download data with harmonizome script

--- a/try_download.ipynb
+++ b/try_download.ipynb
@@ -9,11 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DrugBank Drug Targets downloaded.\n",
-      "ENCODE Transcription Factor Binding Site Profiles downloaded.\n",
-      "HPO Gene-Disease Associations downloaded.\n",
-      "JASPAR Predicted Transcription Factor Targets downloaded.\n",
-      "Reactome Pathways downloaded.\n"
+      "GTEx Tissue Gene Expression Profiles downloaded.\n",
+      "KEGG Pathways downloaded.\n"
      ]
     }
    ],
@@ -87,9 +84,9 @@
     "        # ('CHEA Transcription Factor Binding Site Profiles', 'chea'),\n",
     "        # ('CHEA Transcription Factor Targets', 'cheappi'),\n",
     "        # ('CMAP Signatures of Differentially Expressed Genes for Small Molecules', 'cmap'),\n",
-    "        # ('COMPARTMENTS Curated Protein Localization Evidence Scores', 'jensencompartmentcurated'),\n",
-    "        # ('COMPARTMENTS Experimental Protein Localization Evidence Scores', 'jensencompartmentexpts'),\n",
-    "        # ('COMPARTMENTS Text-mining Protein Localization Evidence Scores', 'jensencompartmenttextmining'),\n",
+    "        ## ('COMPARTMENTS Curated Protein Localization Evidence Scores', 'jensencompartmentcurated'),\n",
+    "        ## ('COMPARTMENTS Experimental Protein Localization Evidence Scores', 'jensencompartmentexpts'),\n",
+    "        ## ('COMPARTMENTS Text-mining Protein Localization Evidence Scores', 'jensencompartmenttextmining'),\n",
     "        # ('CORUM Protein Complexes', 'corum'),\n",
     "        # ('COSMIC Cell Line Gene CNV Profiles', 'cosmiccnv'),\n",
     "        # ('COSMIC Cell Line Gene Mutation Profiles', 'cosmicmut'),\n",
@@ -103,9 +100,9 @@
     "        # ('DISEASES Curated Gene-Disease Assocation Evidence Scores', 'jensendiseasecurated'),\n",
     "        # ('DISEASES Experimental Gene-Disease Assocation Evidence Scores', 'jensendiseaseexpts'),\n",
     "        # ('DISEASES Text-mining Gene-Disease Assocation Evidence Scores', 'jensendiseasetextmining'),\n",
-    "        ('DrugBank Drug Targets', 'drugbank'),\n",
+    "        ##('DrugBank Drug Targets', 'drugbank'),   # \n",
     "        # ('ENCODE Histone Modification Site Profiles', 'encodehm'),\n",
-    "        ('ENCODE Transcription Factor Binding Site Profiles', 'encodetf'),\n",
+    "        ##('ENCODE Transcription Factor Binding Site Profiles', 'encodetf'),\n",
     "        # ('ENCODE Transcription Factor Targets', 'encodetfppi'),\n",
     "        # ('ESCAPE Omics Signatures of Genes and Proteins for Stem Cells', 'escape'),\n",
     "        # ('GAD Gene-Disease Associations', 'gad'),\n",
@@ -120,10 +117,10 @@
     "        # ('GO Biological Process Annotations', 'gobp'),\n",
     "        # ('GO Cellular Component Annotations', 'gocc'),\n",
     "        # ('GO Molecular Function Annotations', 'gomf'),\n",
-    "        # ('GTEx Tissue Gene Expression Profiles', 'gtextissue'),\n",
+    "         ('GTEx Tissue Gene Expression Profiles', 'gtextissue'),\n",
     "        # ('GTEx Tissue Sample Gene Expression Profiles', 'gtexsample'),\n",
     "        # ('GTEx eQTL', 'gtexeqtl'),\n",
-    "        # ('GWAS Catalog SNP-Phenotype Associations', 'gwascatalog'),\n",
+    "        ## ('GWAS Catalog SNP-Phenotype Associations', 'gwascatalog'),\n",
     "        # ('GWASdb SNP-Disease Associations', 'gwasdbdisease'),\n",
     "        # ('GWASdb SNP-Phenotype Associations', 'gwasdbphenotype'),\n",
     "        # ('GeneRIF Biological Term Annotations', 'generif'),\n",
@@ -137,7 +134,7 @@
     "        # ('HPA Tissue Protein Expression Profiles', 'hpatissuesprotein'),\n",
     "        # ('HPA Tissue Sample Gene Expression Profiles', 'hpasamples'),\n",
     "        # ('HPM Cell Type and Tissue Protein Expression Profiles', 'hpm'),\n",
-    "        ('HPO Gene-Disease Associations', 'hpo'),\n",
+    "        ##('HPO Gene-Disease Associations', 'hpo'),\n",
     "        # ('HPRD Protein-Protein Interactions', 'hprd'),\n",
     "        # ('Heiser et al., PNAS, 2011 Cell Line Gene Expression Profiles', 'heiser'),\n",
     "        # ('HuGE Navigator Gene-Phenotype Associations', 'hugenavigator'),\n",
@@ -146,10 +143,10 @@
     "        # ('HumanCyc Pathways', 'humancyc'),\n",
     "        # ('IntAct Biomolecular Interactions', 'intact'),\n",
     "        # ('InterPro Predicted Protein Domain Annotations', 'interpro'),\n",
-    "        ('JASPAR Predicted Transcription Factor Targets', 'jasparpwm'),\n",
+    "        ##('JASPAR Predicted Transcription Factor Targets', 'jasparpwm'),\n",
     "        # ('KEA Substrates of Kinases', 'kea'),\n",
     "        # ('KEGG Biomolecular Interactions', 'keggppi'),\n",
-    "        # ('KEGG Pathways', 'kegg'),\n",
+    "         ('KEGG Pathways', 'kegg'),\n",
     "        # ('Kinativ Kinase Inhibitor Bioactivity Profiles', 'kinativ'),\n",
     "        # ('KinomeScan Kinase Inhibitor Targets', 'kinomescan'),\n",
     "        # ('Klijn et al., Nat. Biotechnol., 2015 Cell Line Gene CNV Profiles', 'klijncnv'),\n",
@@ -166,7 +163,7 @@
     "        # ('MotifMap Predicted Transcription Factor Targets', 'motifmap'),\n",
     "        # ('NURSA Protein Complexes', 'nursa'),\n",
     "        # ('NURSA Protein-Protein Interactions', 'nursappi'),\n",
-    "        # ('OMIM Gene-Disease Associations', 'omim'),\n",
+    "        ## ('OMIM Gene-Disease Associations', 'omim'),\n",
     "        # ('PANTHER Biomolecular Interactions', 'pantherppi'),\n",
     "        # ('PANTHER Pathways', 'panther'),\n",
     "        # ('PID Biomolecular Interactions', 'pidppi'),\n",
@@ -177,7 +174,7 @@
     "        # ('Phosphosite Textmining Biological Term Annotations', 'phosphositetextmining'),\n",
     "        # ('ProteomicsDB Cell Type and Tissue Protein Expression Profiles', 'proteomicsdb'),\n",
     "        # ('Reactome Biomolecular Interactions', 'reactomeppi'),\n",
-    "        ('Reactome Pathways', 'reactome'),\n",
+    "        ##('Reactome Pathways', 'reactome'),\n",
     "        # ('Recon X Predicted Biomolecular Interactions', 'reconx'),\n",
     "        # ('Roadmap Epigenomics Cell and Tissue DNA Accessibility Profiles', 'epigenomicsdnaaccessibility'),\n",
     "        # ('Roadmap Epigenomics Cell and Tissue DNA Methylation Profiles', 'epigenomicsdnamethylation'),\n",
